# API-Router

./: .editorconfig  .gitignore  AGENTS.md  Agent Orchestrator.cmd  LICENSE  QWEN.md  README.md  codex-web.html  index.html  package-lock.json  package.json  plan.md  provider-modularization-plan.md  tsconfig.json  vite.config.ts
mcp/: Cargo.toml  README.md
mcp/src/: main.rs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/build_support/: git_exec.rs
src-tauri/src/: app_state.rs  codex_app_server.rs  codex_cli_swap.rs  codex_home_env.rs  codex_wsl_bridge.rs  commands.rs  constants.rs  lan_sync.rs  lib.rs  provider_switchboard.rs  shared_tui_runtime.rs  tailscale_diagnostics.rs
src-tauri/src/commands/: account_switchboard.rs  codex_web_transport.rs  diagnostics_fetch.rs  external_links.rs  local_diagnostics.rs  provider_management.rs  provider_timeline.rs  quota_ops.rs  spend_history.rs  status_snapshot.rs  tailscale.rs  usage_metrics.rs  wsl_gateway_access.rs
src-tauri/src/commands/status_snapshot_support/: dashboard_snapshot_cache.rs  mod.rs  session_retention.rs  session_visibility.rs  thread_index_merge.rs
src-tauri/src/diagnostics/: README.md  codex_web_pipeline.rs  codex_web_transport.rs  mod.rs
src-tauri/src/lan_sync/: lan_fetch.rs  local_state.rs  remote_update.rs  shared_health.rs  usage_history.rs  versioning.rs  watchdog_incidents.rs
src-tauri/src/lan_sync/remote_update/: lan-remote-update.ps1  lan-remote-update.sh
src-tauri/src/lib_parts/: codex_and_helpers.rs  provider_config.rs  status.rs  usage_math.rs  usage_pricing.rs  usage_statistics.rs
src-tauri/src/orchestrator/: config.rs  gateway.rs  gateway_bootstrap.rs  gateway_tests.rs  mod.rs  openai.rs  quota.rs  router.rs  secrets.rs  store.rs  upstream.rs  wt_session.rs
src-tauri/src/orchestrator/gateway/: app_web_assets.rs  request_helpers.rs  (+26 more)
src-tauri/src/platform/: codex_managed_terminal.rs  codex_terminal_session.rs  git_layout.rs  local_network.rs  mod.rs  windows_firewall.rs  windows_loopback_peer.rs  windows_terminal.rs  wsl_availability.rs  wsl_gateway_host.rs
src-tauri/src/provider_switchboard/: actions.rs  tests.rs
src-tauri/tests/: git_layout.rs
src-tauri/windows/: api-router-updater.manifest
(+548 files in other folders)
