[package]
name = "api_router"
version = "0.4.0"
description = "A Tauri App"
authors = ["you"]
license = "MIT"
repository = "https://github.com/yiyousiow000814/API-Router"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-single-instance = "2"
axum = "0.7"
http = "1"
hyper = { version = "1", features = ["http1", "server"] }
tokio = { version = "1", features = ["io-util", "macros", "process", "rt-multi-thread", "signal", "time"] }
tower = "0.5"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls", "gzip", "brotli", "deflate"] }
uuid = { version = "1", features = ["v4"] }
thiserror = "2"
parking_lot = "0.12"
sled = "0.34"
toml = "0.8"
anyhow = "1"
futures-util = "0.3"
async-stream = "0.3"
bytes = "1"
image = { version = "0.25", default-features = false, features = ["png"] }
urlencoding = "2"
fastrand = "2"
open = "5"
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = [
  "Win32_Foundation",
  "Win32_NetworkManagement_IpHelper",
  "Win32_Networking_WinSock",
  "Win32_System_Diagnostics_Debug",
  "Win32_System_Diagnostics_ToolHelp",
  "Win32_System_Threading",
] }

[dev-dependencies]
tempfile = "3"
